--- a/css/css/tag.css
+++ b/css/css/tag.css
@@ -6,9 +6,13 @@ ul, ol {
     padding: 0;
 }
 
+li {
+    margin-left: 60px;
+}
+
 .tag {
     border: solid 4px;
-    margin: 10px;
+    margin: 5px;
 }
 
 .tag label {
