--- a/webpack/public/estilo.css
+++ b/webpack/public/estilo.css
@@ -1,8 +1,14 @@
 body {
-  background-color: red; }
+  background-color: gray;
+  background-image: url(6777486e7ac73f627f41dceddc0eedd1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh; }
 
 .botao {
   background-color: #19B3E6;
   color: #fff;
-  font-size: 1.8em; }
+  font-size: 1.8em;
+  width: 90px;
+  height: 40px; }
 
